Add pathlib support and directory detection to Fine_Tune_Model.ipynb
- Replace string paths with pathlib.Path for cross-platform compatibility
- Add automatic directory detection for two execution scenarios:
  * Running from notebook directory (Tutorial_2_Fine_Tuning/)
  * Running from /workspace with repo at /workspace/tutorials
- Update dataset path to use BASE_DIR with pathlib
- Add automatic dataset download and extraction if not found
- Improve path handling consistency across the notebook

--- a/Tutorial_2_Fine_Tuning/Fine_Tune_Model.ipynb
+++ b/Tutorial_2_Fine_Tuning/Fine_Tune_Model.ipynb
@@ -62,6 +62,7 @@
     "\n",
     "# Utilities\n",
     "import gc\n",
+    "from pathlib import Path\n",
     "from tqdm.auto import tqdm\n",
     "\n",
     "# Set style for prettier plots\n",
@@ -74,12 +75,82 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8f5bfa95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cwd = Path.cwd()\n",
+    "\n",
+    "if cwd.name == \"Tutorial_2_Fine_Tuning\":\n",
+    "    BASE_DIR = Path(\"..\")\n",
+    "elif cwd.name == \"tutorials\":\n",
+    "    BASE_DIR = Path(\"./\")\n",
+    "elif cwd == Path(\"/workspace\"):\n",
+    "    BASE_DIR = Path(\"/workspace/tutorials\")\n",
+    "else:\n",
+    "    BASE_DIR = cwd\n",
+    "\n",
+    "print(f\"Current directory:     {cwd}\")\n",
+    "print(f\"Base directory set to: {BASE_DIR.resolve()}\")\n",
+    "\n",
+    "dataset_path = BASE_DIR / Path(\"ProteinGym_DMS_data\") / \"cleaned_ProteinGym_DMS_substitutions.csv\"\n",
+    "\n",
+    "if not dataset_path.exists():\n",
+    "    print(f\"Warning:               Running from notebook directory but data file not found\")\n",
+    "    print(f\"Expected:              {dataset_path.resolve()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27fa1e78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If the data file is not found, download and extract it\n",
+    "if not dataset_path.exists():\n",
+    "    import tarfile\n",
+    "    import urllib.request\n",
+    "    \n",
+    "    print(f\"📥 Data file not found. Downloading...\")\n",
+    "    \n",
+    "    # URL and local paths\n",
+    "    download_url = \"https://raw.githubusercontent.com/ai-for-science-org/tutorials/refs/heads/main/tutorial_data/cleaned_ProteinGym_DMS_substitutions.csv.tar.gz\"\n",
+    "    tar_gz_path = BASE_DIR / Path(\"ProteinGym_DMS_data\") / \"cleaned_ProteinGym_DMS_substitutions.csv.tar.gz\"\n",
+    "    \n",
+    "    # Create directory if it doesn't exist\n",
+    "    tar_gz_path.parent.mkdir(parents=True, exist_ok=True)\n",
+    "    \n",
+    "    # Download the file\n",
+    "    print(f\"  Downloading from: {download_url}\")\n",
+    "    urllib.request.urlretrieve(download_url, tar_gz_path)\n",
+    "    print(f\"  ✓ Downloaded to: {tar_gz_path}\")\n",
+    "    \n",
+    "    # Extract the tar.gz file\n",
+    "    print(f\"  Extracting archive...\")\n",
+    "    with tarfile.open(tar_gz_path, \"r:gz\") as tar:\n",
+    "        tar.extractall(path=tar_gz_path.parent)\n",
+    "    print(f\"  ✓ Extracted successfully\")\n",
+    "    \n",
+    "    # Clean up the tar.gz file\n",
+    "    tar_gz_path.unlink()\n",
+    "    print(f\"  ✓ Removed archive file\")\n",
+    "    \n",
+    "    print(f\"\\n✓ Data file available at: {dataset_path}\")\n",
+    "else:\n",
+    "    print(f\"✓ Data file found at: {dataset_path}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8243c318",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Configure compute device\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"mps\" if torch.backends.mps.is_available() else \"cpu\")\n",
     "print(f\"✓ Using device: {device}\")\n",
     "if torch.cuda.is_available():\n",
     "    print(f\"  GPU: {torch.cuda.get_device_name(0)}\")\n",
@@ -545,7 +616,7 @@
    "outputs": [],
    "source": [
     "# Load the cleaned dataset from Tutorial 1\n",
-    "DATASET_NAME = \"../ProteinGym_DMS_data/cleaned_ProteinGym_DMS_substitutions.csv\"\n",
+    "DATASET_NAME = BASE_DIR / \"ProteinGym_DMS_data\" / \"cleaned_ProteinGym_DMS_substitutions.csv\"\n",
     "\n",
     "print(f\"📂 Loading dataset: {DATASET_NAME}\")\n",
     "dataset = pd.read_csv(DATASET_NAME, usecols=[\"mut_seq\", \"score_norm\"])\n",
@@ -708,7 +779,7 @@
    "source": [
     "# Configuration\n",
     "BATCH_SIZE = 512\n",
-    "NUM_WORKERS = 12\n",
+    "NUM_WORKERS = 12 if device.type != 'mps' else 0  # Avoid multiprocessing issues on macOS MPS\n",
     "\n",
     "print(\"🔄 Generating embeddings with frozen model...\")\n",
     "print(\"   This may take a few minutes...\\n\")\n",
@@ -1077,12 +1148,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Clean up GPU memory\n",
-    "print(\"🧹 Cleaning up GPU memory...\")\n",
+    "# Clean up GPU or MPS memory\n",
+    "print(\"🧹 Cleaning up device memory...\")\n",
     "del model\n",
     "del ft_model\n",
     "del regression_model\n",
-    "torch.cuda.empty_cache()\n",
+    "\n",
+    "if torch.cuda.is_available():\n",
+    "    torch.cuda.empty_cache()\n",
+    "elif getattr(torch, 'mps', None) is not None and torch.backends.mps.is_available():\n",
+    "    torch.mps.empty_cache()\n",
+    "\n",
     "gc.collect()\n",
     "print(\"✓ Memory cleaned!\")"
    ]
@@ -1122,7 +1198,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "workshop_true",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1136,7 +1212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
